[tool.poetry]
name = "prompton-ui-streamlit"
version = "0.1.1"
description = "Example UI for prompton API using prompton Python SDK and Streamit"
authors = ["PromptOn <hello@prompton.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
streamlit = "^1.23.1"
prompton = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
